[package]
name = "include_absolute_path"
version = "0.1.6"
edition = "2024"
authors = ["Swoorup Joshi"]
license = "MIT"
description = "Macro to returns absolute path of a specified file or directory"
documentation = "https://docs.rs/include_absolute_path"
repository = "https://github.com/Swoorup/include_absolute_path"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
shellexpand = "3.1"
quote = "1.0"
syn = "2.0"
